{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 21,
  "lineage": "fa19872a-a602-561b-19d0-361a48a00827",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-11-24T09:47:59.361-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/striped-guard-472315-g4/global/firewalls/vpc3-custom-allow-custom",
            "log_config": [],
            "name": "vpc3-custom-allow-custom",
            "network": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/networks/vpc3-custom",
            "priority": 1000,
            "project": "striped-guard-472315-g4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/firewalls/vpc3-custom-allow-custom",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc3_custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-24T09:47:59.244-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/striped-guard-472315-g4/global/firewalls/vpc3-custom-allow-health-check",
            "log_config": [],
            "name": "vpc3-custom-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/networks/vpc3-custom",
            "priority": 1000,
            "project": "striped-guard-472315-g4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/firewalls/vpc3-custom-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc3_custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-24T09:58:51.798-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/striped-guard-472315-g4/global/firewalls/vpc3-custom-allow-http",
            "log_config": [],
            "name": "vpc3-custom-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/networks/vpc3-custom",
            "priority": 65534,
            "project": "striped-guard-472315-g4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/firewalls/vpc3-custom-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc3_custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-11-24T09:47:58.957-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/striped-guard-472315-g4/global/firewalls/vpc3-custom-allow-icmp",
            "log_config": [],
            "name": "vpc3-custom-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/networks/vpc3-custom",
            "priority": 1000,
            "project": "striped-guard-472315-g4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/firewalls/vpc3-custom-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc3_custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-24T09:47:59.320-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/striped-guard-472315-g4/global/firewalls/vpc3-custom-allow-ssh",
            "log_config": [],
            "name": "vpc3-custom-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/networks/vpc3-custom",
            "priority": 1000,
            "project": "striped-guard-472315-g4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/firewalls/vpc3-custom-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc3_custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc3_custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/striped-guard-472315-g4/global/networks/vpc3-custom",
            "mtu": 0,
            "name": "vpc3-custom",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4702379096389788887",
            "project": "striped-guard-472315-g4",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/networks/vpc3-custom"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "us_central1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-24T09:47:59.080-08:00",
            "gateway_address": "10.135.0.1",
            "id": "projects/striped-guard-472315-g4/regions/us-central1/subnetworks/us-central1-subnet",
            "ip_cidr_range": "10.135.0.0/20",
            "name": "us-central1-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/networks/vpc3-custom",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "striped-guard-472315-g4",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/regions/us-central1/subnetworks/us-central1-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc3_custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "us_east1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-24T09:48:00.571-08:00",
            "gateway_address": "10.145.0.1",
            "id": "projects/striped-guard-472315-g4/regions/us-east1/subnetworks/us-east1-subnet",
            "ip_cidr_range": "10.145.0.0/20",
            "name": "us-east1-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/global/networks/vpc3-custom",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "striped-guard-472315-g4",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/striped-guard-472315-g4/regions/us-east1/subnetworks/us-east1-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc3_custom"
          ]
        }
      ]
    }
  ]
}